--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <td>0.41 (9.8 Earth hours)</td>
         </tr>
         <tr>
-          <th scope="row">Revolution period (Earth days)</td>
+          <th scope="row">Revolution period (Earth days)</th>
           <td>365.26</td>
           <td>686.98</td>
           <td>30,685 (84 Earth years)</td>
